--- a/ML-first-year/2EL1730-ML-Lab10/recommender_systems_lab_student_version.ipynb
+++ b/ML-first-year/2EL1730-ML-Lab10/recommender_systems_lab_student_version.ipynb
@@ -26,13 +26,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "b031bc91",
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd"
+    "import pandas as pd\n"
    ]
   },
   {
@@ -100,8 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2d24856a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies = pd.read_csv(r'D:\\Deep learning projects\\machine-learning-course\\2EL1730-ML-Lab10\\movies.csv')\n",
+    "ratings = pd.read_csv(r'D:\\Deep learning projects\\machine-learning-course\\2EL1730-ML-Lab10\\ratings.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "919c9df5",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -134,13 +145,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e6662951",
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def CosineSimilarity(X1,X2) :\n",
+    "    return np.cos(np.dot(X1,X2)/(np.linalg.norm(X1) * np.linalg.norm(X2)))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -390,7 +404,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
