--- a/ML-advanced/TD3/lab3.ipynb
+++ b/ML-advanced/TD3/lab3.ipynb
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy: 0.9838\n"
+      "Accuracy: 0.9837\n"
      ]
     }
    ],
@@ -149,7 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(245,)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(np.ones((245,)) * np.ones((245,))).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,8 +212,13 @@
     "        return 1 / (1 + np.exp(-z))\n",
     "    \n",
     "    def loss(self, X, y):\n",
-    "        z = X.dot(self.coef_)\n",
-    "        return np.mean(np.log(1 + np.exp(-y * z))) + 0.5 * self.lambd_ * np.sum(self.coef_ ** 2)\n",
+    "        z = self.logistic(X.dot(self.coef_))\n",
+    "        y = (y + 1)/2\n",
+    "        # print(self.coef_[:10])\n",
+    "        loss = -np.mean((y*np.log(z) + (1 - y) * np.log(1 - z))) #+ np.linalg.norm(self.coef_, 2)\n",
+    "        # print(np.linalg.norm(self.coef_, 2))\n",
+    "        # print(np.log(z), np.log(1-z), z)\n",
+    "        return loss\n",
     "        \n",
     "    def fit(self, X, y, lr=1e-2, bsize=64, max_iter=100, minibatch=False):\n",
     "        \n",
@@ -209,49 +234,44 @@
     "        mini_batch : bool,                                 method used                    | False\n",
     "        \"\"\"\n",
     "        n_samples, n_features = X.shape\n",
-    "        self.coef_ = np.zeros(n_features)\n",
+    "        self.coef_ = np.random.rand(n_features)\n",
     "        m = np.zeros_like(self.coef_)\n",
     "        v = np.zeros_like(self.coef_)\n",
     "        t = 0\n",
     "\n",
-    "        for epoch in range(max_iter):\n",
-    "            if minibatch:\n",
-    "                X, y = shuffle(X, y)\n",
+    "        for epoch in tqdm(range(max_iter)):\n",
+    "            X, y = shuffle(X, y)\n",
+    "            if minibatch: \n",
     "                for i in range(0, n_samples, bsize):\n",
     "                    X_batch = X[i:i+bsize]\n",
     "                    y_batch = y[i:i+bsize]\n",
     "                    \n",
-    "                    z = X_batch.dot(self.coef_)\n",
-    "                    h = self.logistic(z)\n",
-    "                    grad = X_batch.T.dot(h - y_batch) / bsize + self.lambd_ * self.coef_\n",
+    "                    # print(X_batch.shape, self.coef_.shape, self.loss(X,y).shape)\n",
+    "                    self.coef_ = self.coef_ - lr * self.loss(X_batch,y_batch)\n",
+    "                    # z = X_batch.dot(self.coef_)\n",
+    "                    # h = self.logistic(z)\n",
+    "                    # grad = X_batch.T.dot(h - y_batch) / bsize + self.lambd_ * self.coef_\n",
     "                    \n",
-    "                    t += 1\n",
-    "                    m = self.beta_ * m + (1 - self.beta_) * grad\n",
-    "                    v = self.gamma_ * v + (1 - self.gamma_) * (grad ** 2)\n",
+    "                    # t += 1\n",
+    "                    # m = self.beta_ * m + (1 - self.beta_) * grad\n",
+    "                    # v = self.gamma_ * v + (1 - self.gamma_) * (grad ** 2)\n",
     "                    \n",
-    "                    if self.debias_:\n",
-    "                        m_hat = m / (1 - self.beta_ ** t)\n",
-    "                        v_hat = v / (1 - self.gamma_ ** t)\n",
-    "                    else:\n",
-    "                        m_hat, v_hat = m, v\n",
+    "                    # if self.debias_:\n",
+    "                    #     m_hat = m / (1 - self.beta_ ** t)\n",
+    "                    #     v_hat = v / (1 - self.gamma_ ** t)\n",
+    "                    # else:\n",
+    "                    #     m_hat, v_hat = m, v\n",
     "                    \n",
-    "                    self.coef_ -= lr * m_hat / (np.sqrt(v_hat) + self.eps_)\n",
+    "                    # self.coef_ -= lr * m_hat / (np.sqrt(v_hat) + self.eps_)\n",
+    "                print(self.loss(X_batch,y_batch))\n",
     "            else:\n",
-    "                z = X.dot(self.coef_)\n",
-    "                h = self.logistic(z)\n",
-    "                grad = X.T.dot(h - y) / n_samples + self.lambd_ * self.coef_\n",
-    "                \n",
-    "                t += 1\n",
-    "                m = self.beta_ * m + (1 - self.beta_) * grad\n",
-    "                v = self.gamma_ * v + (1 - self.gamma_) * (grad ** 2)\n",
-    "                \n",
-    "                if self.debias_:\n",
-    "                    m_hat = m / (1 - self.beta_ ** t)\n",
-    "                    v_hat = v / (1 - self.gamma_ ** t)\n",
-    "                else:\n",
-    "                    m_hat, v_hat = m, v\n",
-    "                \n",
-    "                self.coef_ -= lr * m_hat / (np.sqrt(v_hat) + self.eps_)\n",
+    "                for i in range(0, n_samples):\n",
+    "                    \n",
+    "                    X_batch = np.expand_dims(X[i], axis=0)\n",
+    "                    y_batch = np.expand_dims(y[i], axis=0)\n",
+    "                    # print(X_batch.shape, self.coef_.shape, self.loss(X,y).shape)\n",
+    "                    self.coef_ -= lr * self.loss(X_batch,y_batch)\n",
+    "                    print(self.loss(X_batch,y_batch))\n",
     "            \n",
     "            self.coef_history_.append(self.coef_.copy())\n",
     "            self.f_history_.append(self.loss(X, y))\n",
@@ -272,7 +292,7 @@
     "        probas = self.logistic(X.dot(self.coef_))\n",
     "        return (probas >= self.thresh_).astype(int)\n",
     "    \n",
-    "    def accuracy_evaluation(self,X,y,thresh=0.5,margin=0, vizualisation=True):\n",
+    "    def accuracy_evaluation(self,X,y,thresh=0.5,margin=0, vizualisation=False):\n",
     "        \"\"\" Compute detailed accuracy rates.\n",
     "    \n",
     "        Parameters:\n",
@@ -296,8 +316,11 @@
     "        UN               : % of 0 labelled undetermined\n",
     "        FP               : % of 0 labelled 1\n",
     "        F1_score         : F1-score\n",
-    "        \"\"\"  \n",
+    "        \"\"\" \n",
+    "        print(X.shape)\n",
     "        probas = self.logistic(X.dot(self.coef_))\n",
+    "        \n",
+    "        print(probas)\n",
     "        y_pred = np.zeros_like(y)\n",
     "        y_pred[probas > thresh + margin] = 1\n",
     "        y_pred[probas < thresh - margin] = 0\n",
@@ -380,44 +403,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
    "metadata": {
     "scrolled": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 3/3 [00:00<00:00, 87.70it/s]"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Good predictions: 8.36%\n",
-      "Undetermined: 8.65%\n",
-      "Wrong predictions: 91.29%\n",
-      "True Positives: 1.87%\n",
-      "Undetermined Positives: 10.86%\n",
-      "False Negatives: 87.27%\n",
-      "True Negatives: nan%\n",
-      "Undetermined Negatives: nan%\n",
-      "False Positives: nan%\n",
-      "F1-score: 0.0000\n",
-      "Accuracy: 0.0041\n"
+      "0.7974888893442078\n",
+      "0.3899267128436819\n",
+      "0.2918854789869993\n",
+      "(16418, 300)\n",
+      "[0.33350437 0.00908958 0.00060922 ... 0.14892188 0.15873133 0.0007179 ]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\bouet\\AppData\\Local\\Temp\\ipykernel_31428\\652998116.py:155: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "\n",
+      "C:\\Users\\emili\\AppData\\Local\\Temp\\ipykernel_9360\\1050672081.py:157: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  TN = np.sum((y == 0) & (y_pred == 0)) / np.sum(y == 0)\n",
-      "C:\\Users\\bouet\\AppData\\Local\\Temp\\ipykernel_31428\\652998116.py:156: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "C:\\Users\\emili\\AppData\\Local\\Temp\\ipykernel_9360\\1050672081.py:158: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  UN = np.sum((y == 0) & (y_pred == -1)) / np.sum(y == 0)\n",
-      "C:\\Users\\bouet\\AppData\\Local\\Temp\\ipykernel_31428\\652998116.py:157: RuntimeWarning: invalid value encountered in scalar divide\n",
+      "C:\\Users\\emili\\AppData\\Local\\Temp\\ipykernel_9360\\1050672081.py:159: RuntimeWarning: invalid value encountered in scalar divide\n",
       "  FP = np.sum((y == 0) & (y_pred == 1)) / np.sum(y == 0)\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(0.08557680594469484,\n",
+       " 0.08649043732488731,\n",
+       " 0.9108904860518943,\n",
+       " 0.08052434456928839,\n",
+       " 0.10861423220973783,\n",
+       " 0.8108614232209738,\n",
+       " nan,\n",
+       " nan,\n",
+       " nan,\n",
+       " 0.0)"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "model = StochasticLogisticRegression(2, 0.01, 64)\n",
-    "model.fit(X_train, y_train, max_iter=1000)\n",
+    "model = StochasticLogisticRegression(2, 0.001, 64)\n",
+    "model.fit(X_train[:10000], y_train[:10000], max_iter=3, minibatch=True, bsize=512)\n",
+    "\n",
+    "\n",
     "\n",
     "# Make predictions on the test set\n",
     "y_pred = model.predict(X_test)\n",
@@ -522,7 +586,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "ml_kaggle",
+   "display_name": "dl_env",
    "language": "python",
    "name": "python3"
   },
@@ -536,7 +600,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.18"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
