--- a/ML-advanced/TD6/lab6 copy.ipynb
+++ b/ML-advanced/TD6/lab6 copy.ipynb
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -498,7 +498,7 @@
     "plt.figure(figsize=(3, 3))\n",
     "nx_reconstructed = nx.from_numpy_array(adj_matrix)\n",
     "nx.draw(nx_reconstructed, with_labels=True, node_color='lightblue', edge_color='gray', node_size=700, font_size=10)\n",
-    "plt.title(\"Reconstructed Graph (Nodewise Regression with OR)\")\n",
+    "plt.title(\"Reconstructed Graph (Nodewise Regression with AND)\")\n",
     "plt.tight_layout()\n",
     "plt.show()"
    ]
